--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
   <h1>RiverFlow Lu Portfolio</h1>
   <p>Welcome! Here's a preview of my work in communications, design, and digital strategy.</p>
 
-  <h2>🎥 Video Showcase</h2>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+  <h2>🎥 Video : Transcendance project showcase</h2>
+  <iframe width="560" height="315" 
+  src="https://www.youtube.com/embed/qANZkiM7rsY" 
+  title="YouTube video player" frameborder="0" allowfullscreen>
+  </iframe>
 
   <h2>🖼️ Design Samples</h2>
   <ul>
