--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
   </ul>
 
   <h2>📞 Contact</h2>
-  <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+  <p>Email: <a href="mailto:Riverflow.lu@gmail.com">Riverflow.lu@gmail.com</a></p>
 </body>
 </html>
