--- a/index.html
+++ b/index.html
@@ -2,32 +2,102 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>RiverFlow Lu | Communications Portfolio</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 2rem; max-width: 800px; margin: auto; }
-    h1 { color: #007acc; }
-    a { color: #007acc; }
+    /* Reset & base */
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem 2rem;
+      background: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
+    }
+    h1, h2 {
+      color: #007acc;
+      margin-bottom: 0.5rem;
+    }
+    h1 {
+      border-bottom: 3px solid #007acc;
+      padding-bottom: 0.5rem;
+      font-weight: 700;
+    }
+    a {
+      color: #007acc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    ul {
+      padding-left: 1.25rem;
+      margin-bottom: 1.5rem;
+    }
+    li {
+      margin-bottom: 0.5rem;
+      background: #e6f0fa;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+    }
+    iframe {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      margin: 1rem auto 2rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
+    }
+    /* Responsive video container for vertical video */
+    .video-container {
+      position: relative;
+      padding-bottom: 177.78%; /* vertical aspect ratio */
+      height: 0;
+      overflow: hidden;
+      max-width: 315px;
+      margin: 1rem auto 2rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
+    }
+    .video-container iframe {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 8px;
+      box-shadow: none;
+    }
+    p {
+      margin-bottom: 1.5rem;
+    }
   </style>
 </head>
 <body>
   <h1>RiverFlow Lu Portfolio</h1>
   <p>Welcome! Here's a preview of my work in communications, design, and digital strategy.</p>
 
-  <h2>🎥 Video : Transcendance project showcase</h2>
-  <iframe width="315" height="560"
-  src="https://www.youtube.com/embed/qANZkiM7rsY" 
-  title="YouTube video player" frameborder="0" allowfullscreen>
-  </iframe>
+  <h2>🎥 Video: Transcendance project showcase</h2>
+  <div class="video-container">
+    <iframe
+      src="https://www.youtube.com/embed/qANZkiM7rsY"
+      title="YouTube video player"
+      frameborder="0"
+      allowfullscreen
+    ></iframe>
+  </div>
 
   <h2>🖼️ Design Samples</h2>
   <ul>
-    <li><a href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID" target="_blank">Google Drive Folder (Flyers, Posters, etc.)</a></li>
+    <li><a href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID" target="_blank" rel="noopener noreferrer">Google Drive Folder (Flyers, Posters, etc.)</a></li>
   </ul>
 
   <h2>📄 Content Writing</h2>
   <ul>
-    <li><a href="https://docs.google.com/document/d/YOUR_DOC_ID" target="_blank">Press Release Sample</a></li>
+    <li><a href="https://docs.google.com/document/d/YOUR_DOC_ID" target="_blank" rel="noopener noreferrer">Press Release Sample</a></li>
     <li><a href="#">Newsletter Drafts – coming soon</a></li>
   </ul>
 
