--- a/index.html
+++ b/index.html
@@ -72,6 +72,23 @@
       box-shadow: none;
     }
 
+      .slides-container {
+      position: relative;
+      width: 100%;
+      max-width: 800px;
+      margin: 2rem auto;
+      aspect-ratio: 16 / 9;
+      overflow: hidden;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
+    }
+  
+  .slides-container iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
     p {
       margin-bottom: 1.5rem;
     }
@@ -97,10 +114,10 @@
   </ul>
 
   <h2>📄 Content Writing</h2>
-  <ul>
-    <li><a href="https://docs.google.com/document/d/YOUR_DOC_ID" target="_blank" rel="noopener noreferrer">Press Release Sample</a></li>
-    <li><a href="#">Newsletter Drafts – coming soon</a></li>
-  </ul>
+<div class="slides-container">
+  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000"
+    frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+</div>
 
   <h2>📞 Contact</h2>
   <p>Email: <a href="mailto:Riverflow.lu@gmail.com">Riverflow.lu@gmail.com</a></p>
