--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RiverFlow Lu | Communications Portfolio</title>
+  <title>RiverFlow Lu | Portfolio</title>
   <style>
     /* Reset & base */
     * {
@@ -96,7 +96,7 @@
 </head>
 <body>
   <h1>RiverFlow Lu Portfolio</h1>
-  <p>Welcome! Here's a preview of my work in communications, design, and digital strategy.</p>
+<p>Storytelling meets code. This portfolio brings together my passion for tech — from fintech and blockchain to AI and app development — with a communicator’s mindset. Whether it’s through visuals, words, or interactive media, I translate complex ideas into content that connects.</p>
 
   <h2>🎥 Video: Transcendance project showcase</h2>
   <div class="video-container">
