--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
   <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000"
     frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </div>
+  <div class="slides-container">
+  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRPmx25NMBSBvHFrzQIwCPKvVDAyNyLhagHkujSN4S4zy5EvemI0sO3RfRZkHT3YQ/pubembed?start=true&loop=true&delayms=3000"
+    frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+</div>
 
   <h2>📞 Contact</h2>
   <p>Email: <a href="mailto:Riverflow.lu@gmail.com">Riverflow.lu@gmail.com</a></p>
