--- a/index.html
+++ b/index.html
@@ -108,11 +108,6 @@
     ></iframe>
   </div>
 
-  <h2>🖼️ Design Samples</h2>
-  <ul>
-    <li><a href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID" target="_blank" rel="noopener noreferrer">Google Drive Folder (Flyers, Posters, etc.)</a></li>
-  </ul>
-
   <h2>📄 Content Writing</h2>
 <div class="slides-container">
   <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000"
@@ -122,7 +117,16 @@
   <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRPmx25NMBSBvHFrzQIwCPKvVDAyNyLhagHkujSN4S4zy5EvemI0sO3RfRZkHT3YQ/pubembed?start=true&loop=true&delayms=3000"
     frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </div>
+<div class="slides-container">
+  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTeiV4eE0lX8NW2qEie3UVY1y6NtjbsXhIfl6Btk8yVaXWfDAuWobq5RBX7DP4SJGcPVLDRksqqy6om/pubembed?start=true&loop=true&delayms=3000"
+    frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+</div>
 
+  
+  <h2>🖼️ Design Samples</h2>
+  <ul>
+    <li>Coming soon ...</li>
+  </ul>
   <h2>📞 Contact</h2>
   <p>Email: <a href="mailto:Riverflow.lu@gmail.com">Riverflow.lu@gmail.com</a></p>
 </body>
