--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
 <p>Storytelling meets code. This portfolio brings together my passion for tech — from fintech and blockchain to AI and app development — with a communicator’s mindset. Whether it’s through visuals, words, or interactive media, I translate complex ideas into content that connects.</p>
 
   <h2>🎥 Video: Transcendance project showcase</h2>
+  <p>
+  As part of my ongoing work in tech-forward education, I led the <strong>Transcendance project</strong> at <strong>École 42 Luxembourg</strong>, combining team management, blockchain integration (smart contract coding), and multilingual platform support. This video documents the project's launch, showcasing the peer-driven, decentralized ethos of the school. I also handled filming and post-production to highlight the collaborative and innovative atmosphere.
+  </p>
+
   <div class="video-container">
     <iframe
       src="https://www.youtube.com/embed/qANZkiM7rsY"
