--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
   </div>
 
   <h2>📄 Content Writing</h2>
+  <p>
+    This presentation provides a balanced analysis of press articles covering the benefits and challenges of artificial intelligence. It highlights diverse perspectives on AI’s impact, fostering critical thinking and informed discussion as part of my commitment to clear and thoughtful tech communication.
+  </p>
+
+
 <div class="slides-container">
   <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000"
     frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
