--- a/index.html
+++ b/index.html
@@ -6,109 +6,115 @@
   <title>RiverFlow Lu | Portfolio</title>
   <style>
     /* Reset & base */
-    * {
+    *, *::before, *::after {
       box-sizing: border-box;
     }
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', Arial, sans-serif;
       max-width: 800px;
       margin: 2rem auto;
       padding: 1rem 2rem;
       background: #f9f9f9;
       color: #333;
       line-height: 1.6;
+      font-size: 18px;
     }
     h1, h2 {
       color: #007acc;
       margin-bottom: 0.5rem;
+      font-weight: 700;
     }
     h1 {
       border-bottom: 3px solid #007acc;
       padding-bottom: 0.5rem;
-      font-weight: 700;
+      margin-bottom: 2rem;
+      font-size: 2.5rem;
+    }
+    h2 {
+      margin-top: 2.5rem;
+      font-size: 1.75rem;
+    }
+    p {
+      margin-bottom: 1.5rem;
     }
     a {
       color: #007acc;
       text-decoration: none;
+      transition: color 0.3s ease;
     }
-    a:hover {
+    a:hover, a:focus {
       text-decoration: underline;
+      color: #004a80;
     }
     ul {
       padding-left: 1.25rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
     }
     li {
       margin-bottom: 0.5rem;
       background: #e6f0fa;
       padding: 0.5rem 1rem;
       border-radius: 6px;
+      list-style: disc inside;
+    }
+    /* Responsive iframe containers */
+    .video-container, .slides-container {
+      position: relative;
+      width: 100%;
+      max-width: 560px;
+      margin: 1.5rem auto 3rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
+      overflow: hidden;
+      background: #000; /* subtle background for video */
+    }
+    /* Vertical video container with aspect ratio */
+    .video-container {
+      aspect-ratio: 9 / 16;
+      max-width: 315px;
     }
     iframe {
-      display: block;
-      max-width: 100%;
-      height: auto;
-      margin: 1rem auto 2rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
-    }
-    /* Responsive video container for vertical video */
-    .video-container {
-      position: relative;
-      width: 315px;          /* fixed width */
-      height: 560px;         /* fixed height matching your video */
-      margin: 1rem auto 2rem;
-      border-radius: 8px;
-      overflow: hidden;
-      box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
-    }
-    
-    .video-container iframe {
       position: absolute;
       top: 0; left: 0;
       width: 100%;
       height: 100%;
-      border-radius: 8px;
-      box-shadow: none;
-    }
-
-      .slides-container {
-      position: relative;
-      width: 100%;
-      max-width: 800px;
-      margin: 2rem auto;
-      aspect-ratio: 16 / 9;
-      overflow: hidden;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
-    }
-  
-  .slides-container iframe {
-      width: 100%;
-      height: 100%;
       border: none;
+      border-radius: 8px;
     }
-
-    p {
-      margin-bottom: 1.5rem;
+    /* Contact section tweaks */
+    h2:last-of-type {
+      margin-top: 3rem;
+    }
+    /* Small screens adjustment */
+    @media (max-width: 400px) {
+      body {
+        padding: 1rem 1rem;
+        font-size: 16px;
+      }
+      .video-container {
+        max-width: 280px;
+      }
+      .slides-container {
+        max-width: 100%;
+      }
     }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <h1>RiverFlow Lu Portfolio</h1>
-<p>Storytelling meets code. This portfolio brings together my passion for tech — from fintech and blockchain to AI and app development — with a communicator’s mindset. Whether it’s through visuals, words, or interactive media, I translate complex ideas into content that connects.</p>
+  <p>Storytelling meets code. This portfolio brings together my passion for tech — from fintech and blockchain to AI and app development — with a communicator’s mindset. Whether it’s through visuals, words, or interactive media, I translate complex ideas into content that connects.</p>
 
   <h2>🎥 Video: Transcendance project showcase</h2>
   <p>
-  As part of my ongoing work in tech-forward education, I led the <strong>Transcendance project</strong> at <strong>École 42 Luxembourg</strong>, combining team management, blockchain integration (smart contract coding), and multilingual platform support. This video documents the project's launch, showcasing the peer-driven, decentralized ethos of the school. I also handled filming and post-production to highlight the collaborative and innovative atmosphere.
+    As part of my ongoing work in tech-forward education, I led the <strong>Transcendance project</strong> at <strong>École 42 Luxembourg</strong>, combining team management, blockchain integration (smart contract coding), and multilingual platform support. This video documents the project's launch, showcasing the peer-driven, decentralized ethos of the school. I also handled filming and post-production to highlight the collaborative and innovative atmosphere.
   </p>
-
   <div class="video-container">
     <iframe
       src="https://www.youtube.com/embed/qANZkiM7rsY"
       title="YouTube video player"
-      frameborder="0"
       allowfullscreen
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     ></iframe>
   </div>
 
@@ -116,34 +122,32 @@
   <p>
     This presentation provides a balanced analysis of press articles covering the benefits and challenges of artificial intelligence. It highlights diverse perspectives on AI’s impact, fostering critical thinking and informed discussion as part of my commitment to clear and thoughtful tech communication.
   </p>
-
-
-<div class="slides-container">
-  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000"
-    frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-</div>
-  <p>
-Designed to introduce essential programming languages this presentation reflects my hands-on experience in software development and digital education. It aims to equip learners with basic information about programming.
-</p>
-
   <div class="slides-container">
-  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRPmx25NMBSBvHFrzQIwCPKvVDAyNyLhagHkujSN4S4zy5EvemI0sO3RfRZkHT3YQ/pubembed?start=true&loop=true&delayms=3000"
-    frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-</div>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000"
+      allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+  </div>
+
   <p>
-Focused on the principles and practical uses of blockchain technology, this deck was created to educate and inspire learners about decentralized systems. It blends technical detail with engaging visuals to support effective digital learning.
-</p>
+    Designed to introduce essential programming languages, this presentation reflects my hands-on experience in software development and digital education. It aims to equip learners with basic information about programming.
+  </p>
+  <div class="slides-container">
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRPmx25NMBSBvHFrzQIwCPKvVDAyNyLhagHkujSN4S4zy5EvemI0sO3RfRZkHT3YQ/pubembed?start=true&loop=true&delayms=3000"
+      allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+  </div>
 
-<div class="slides-container">
-  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTeiV4eE0lX8NW2qEie3UVY1y6NtjbsXhIfl6Btk8yVaXWfDAuWobq5RBX7DP4SJGcPVLDRksqqy6om/pubembed?start=true&loop=true&delayms=3000"
-    frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-</div>
+  <p>
+    Focused on the principles and practical uses of blockchain technology, this deck was created to educate and inspire learners about decentralized systems. It blends technical detail with engaging visuals to support effective digital learning.
+  </p>
+  <div class="slides-container">
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTeiV4eE0lX8NW2qEie3UVY1y6NtjbsXhIfl6Btk8yVaXWfDAuWobq5RBX7DP4SJGcPVLDRksqqy6om/pubembed?start=true&loop=true&delayms=3000"
+      allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+  </div>
 
-  
   <h2>🖼️ Design Samples</h2>
   <ul>
     <li>Coming soon ...</li>
   </ul>
+
   <h2>📞 Contact</h2>
   <p>Email: <a href="mailto:Riverflow.lu@gmail.com">Riverflow.lu@gmail.com</a></p>
 </body>
