--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
   <p>
   This presentation provides an in-depth analysis of a single press article on artificial intelligence, unpacking its key arguments, pros, and cons. It showcases the ability to critically evaluate media content and communicate nuanced views on AI’s impact.  </p>
   <div class="slides-container">
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000"
-      allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=false&loop=true&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   </div>
 
   <p>
