--- a/index.html
+++ b/index.html
@@ -110,12 +110,7 @@
     As part of my ongoing work in tech-forward education, I led the <strong>Transcendance project</strong> at <strong>École 42 Luxembourg</strong>, combining team management, blockchain integration (smart contract coding), and multilingual platform support. This video documents the project's launch, showcasing the peer-driven, decentralized ethos of the school. I also handled filming and post-production to highlight the collaborative and innovative atmosphere.
   </p>
   <div class="video-container">
-    <iframe
-      src="https://www.youtube.com/embed/qANZkiM7rsY"
-      title="YouTube video player"
-      allowfullscreen
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    ></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   </div>
 
   <h2>📄 Content Writing</h2>
