--- a/index.html
+++ b/index.html
@@ -70,8 +70,13 @@
     }
     /* Vertical video container with aspect ratio */
     .video-container {
-      aspect-ratio: 9 / 16;
-      max-width: 315px;
+      aspect-ratio: 16 / 9;
+      max-width: 560px;
+    }
+    /* Slides container is wider (16:9) */
+    .slides-container {
+      aspect-ratio: 16 / 9;
+      max-width: 800px;
     }
     iframe {
       position: absolute;
@@ -110,28 +115,50 @@
     As part of my ongoing work in tech-forward education, I led the <strong>Transcendance project</strong> at <strong>École 42 Luxembourg</strong>, combining team management, blockchain integration (smart contract coding), and multilingual platform support. This video documents the project's launch, showcasing the peer-driven, decentralized ethos of the school. I also handled filming and post-production to highlight the collaborative and innovative atmosphere.
   </p>
   <div class="video-container">
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    <iframe 
+      src="https://www.youtube.com/embed/V2-2Ol94Vvk" 
+      title="Transcendance project showcase video" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
   </div>
 
   <h2>📄 Content Writing</h2>
   <p>
-  This presentation provides an in-depth analysis of a single press article on artificial intelligence, unpacking its key arguments, pros, and cons. It showcases the ability to critically evaluate media content and communicate nuanced views on AI’s impact.  </p>
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    This presentation provides an in-depth analysis of a single press article on artificial intelligence, unpacking its key arguments, pros, and cons. It showcases the ability to critically evaluate media content and communicate nuanced views on AI’s impact.
+  </p>
+  <div class="slides-container">
+    <iframe 
+      src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000" 
+      allowfullscreen 
+      mozallowfullscreen 
+      webkitallowfullscreen>
+    </iframe>
+  </div>
 
   <p>
     Designed to introduce essential programming languages, this presentation reflects my hands-on experience in software development and digital education. It aims to equip learners with basic information about programming.
   </p>
   <div class="slides-container">
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRPmx25NMBSBvHFrzQIwCPKvVDAyNyLhagHkujSN4S4zy5EvemI0sO3RfRZkHT3YQ/pubembed?start=true&loop=true&delayms=3000"
-      allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+    <iframe 
+      src="https://docs.google.com/presentation/d/e/2PACX-1vRPmx25NMBSBvHFrzQIwCPKvVDAyNyLhagHkujSN4S4zy5EvemI0sO3RfRZkHT3YQ/pubembed?start=true&loop=true&delayms=3000" 
+      allowfullscreen 
+      mozallowfullscreen 
+      webkitallowfullscreen>
+    </iframe>
   </div>
 
   <p>
     Focused on the principles and practical uses of blockchain technology, this deck was created to educate and inspire learners about decentralized systems. It blends technical detail with engaging visuals to support effective digital learning.
   </p>
   <div class="slides-container">
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTeiV4eE0lX8NW2qEie3UVY1y6NtjbsXhIfl6Btk8yVaXWfDAuWobq5RBX7DP4SJGcPVLDRksqqy6om/pubembed?start=true&loop=true&delayms=3000"
-      allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+    <iframe 
+      src="https://docs.google.com/presentation/d/e/2PACX-1vTeiV4eE0lX8NW2qEie3UVY1y6NtjbsXhIfl6Btk8yVaXWfDAuWobq5RBX7DP4SJGcPVLDRksqqy6om/pubembed?start=true&loop=true&delayms=3000" 
+      allowfullscreen 
+      mozallowfullscreen 
+      webkitallowfullscreen>
+    </iframe>
   </div>
 
   <h2>🖼️ Design Samples</h2>
