--- a/index.html
+++ b/index.html
@@ -66,17 +66,12 @@
       border-radius: 8px;
       box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
       overflow: hidden;
-      background: #000; /* subtle background for video */
+      background: #000;
     }
     /* Vertical video container with aspect ratio */
     .video-container {
-      aspect-ratio: 16 / 9;
-      max-width: 560px;
-    }
-    /* Slides container is wider (16:9) */
-    .slides-container {
-      aspect-ratio: 16 / 9;
-      max-width: 800px;
+      aspect-ratio: 9 / 16;
+      max-width: 315px;
     }
     iframe {
       position: absolute;
@@ -130,43 +125,4 @@
   </p>
   <div class="slides-container">
     <iframe 
-      src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000" 
-      allowfullscreen 
-      mozallowfullscreen 
-      webkitallowfullscreen>
-    </iframe>
-  </div>
-
-  <p>
-    Designed to introduce essential programming languages, this presentation reflects my hands-on experience in software development and digital education. It aims to equip learners with basic information about programming.
-  </p>
-  <div class="slides-container">
-    <iframe 
-      src="https://docs.google.com/presentation/d/e/2PACX-1vRPmx25NMBSBvHFrzQIwCPKvVDAyNyLhagHkujSN4S4zy5EvemI0sO3RfRZkHT3YQ/pubembed?start=true&loop=true&delayms=3000" 
-      allowfullscreen 
-      mozallowfullscreen 
-      webkitallowfullscreen>
-    </iframe>
-  </div>
-
-  <p>
-    Focused on the principles and practical uses of blockchain technology, this deck was created to educate and inspire learners about decentralized systems. It blends technical detail with engaging visuals to support effective digital learning.
-  </p>
-  <div class="slides-container">
-    <iframe 
-      src="https://docs.google.com/presentation/d/e/2PACX-1vTeiV4eE0lX8NW2qEie3UVY1y6NtjbsXhIfl6Btk8yVaXWfDAuWobq5RBX7DP4SJGcPVLDRksqqy6om/pubembed?start=true&loop=true&delayms=3000" 
-      allowfullscreen 
-      mozallowfullscreen 
-      webkitallowfullscreen>
-    </iframe>
-  </div>
-
-  <h2>🖼️ Design Samples</h2>
-  <ul>
-    <li>Coming soon ...</li>
-  </ul>
-
-  <h2>📞 Contact</h2>
-  <p>Email: <a href="mailto:Riverflow.lu@gmail.com">Riverflow.lu@gmail.com</a></p>
-</body>
-</html>
+      src="http
