--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>RiverFlow Lu | Portfolio</title>
   <style>
-    /* Reset & base */
-    *, *::before, *::after {
-      box-sizing: border-box;
-    }
     body {
       font-family: 'Poppins', Arial, sans-serif;
       max-width: 800px;
@@ -57,8 +53,8 @@
       border-radius: 6px;
       list-style: disc inside;
     }
-    /* Responsive iframe containers */
-    .video-container, .slides-container {
+    /* Video container */
+    .video-container {
       position: relative;
       width: 100%;
       max-width: 560px;
@@ -67,11 +63,19 @@
       box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
       overflow: hidden;
       background: #000;
+      aspect-ratio: 16 / 9;
     }
-    /* Vertical video container with aspect ratio */
-    .video-container {
-      aspect-ratio: 9 / 16;
-      max-width: 315px;
+    /* Slides container */
+    .slides-container {
+      position: relative;
+      width: 100%;
+      max-width: 560px;
+      margin: 1.5rem auto 3rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
+      overflow: hidden;
+      background: #000;
+      aspect-ratio: 16 / 9;
     }
     iframe {
       position: absolute;
@@ -91,9 +95,7 @@
         padding: 1rem 1rem;
         font-size: 16px;
       }
-      .video-container {
-        max-width: 280px;
-      }
+      .video-container,
       .slides-container {
         max-width: 100%;
       }
@@ -103,26 +105,50 @@
 </head>
 <body>
   <h1>RiverFlow Lu Portfolio</h1>
-  <p>Storytelling meets code. This portfolio brings together my passion for tech — from fintech and blockchain to AI and app development — with a communicator’s mindset. Whether it’s through visuals, words, or interactive media, I translate complex ideas into content that connects.</p>
+
+  <p>
+    Storytelling meets code. This portfolio brings together my passion for tech — from fintech and blockchain to AI and app development — with a communicator’s mindset. Whether it’s through visuals, words, or interactive media, I translate complex ideas into content that connects.
+  </p>
 
   <h2>🎥 Video: Transcendance project showcase</h2>
-  <p>
-    As part of my ongoing work in tech-forward education, I led the <strong>Transcendance project</strong> at <strong>École 42 Luxembourg</strong>, combining team management, blockchain integration (smart contract coding), and multilingual platform support. This video documents the project's launch, showcasing the peer-driven, decentralized ethos of the school. I also handled filming and post-production to highlight the collaborative and innovative atmosphere.
-  </p>
   <div class="video-container">
-    <iframe 
-      src="https://www.youtube.com/embed/V2-2Ol94Vvk" 
-      title="Transcendance project showcase video" 
-      frameborder="0" 
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-      allowfullscreen>
-    </iframe>
+    <iframe
+      src="https://www.youtube.com/embed/V2-2Ol94Vvk"
+      allowfullscreen
+      mozallowfullscreen
+      webkitallowfullscreen
+      title="Transcendance project showcase"
+    ></iframe>
   </div>
 
   <h2>📄 Content Writing</h2>
   <p>
     This presentation provides an in-depth analysis of a single press article on artificial intelligence, unpacking its key arguments, pros, and cons. It showcases the ability to critically evaluate media content and communicate nuanced views on AI’s impact.
   </p>
+
+  <!-- Three slides inside Content Writing -->
   <div class="slides-container">
-    <iframe 
-      src="http
+    <iframe
+      src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000"
+      allowfullscreen
+      mozallowfullscreen
+      webkitallowfullscreen
+      title="AI Press Article Analysis"
+    ></iframe>
+  </div>
+
+  <p>
+    Designed to introduce essential programming languages, this presentation reflects my hands-on experience in software development and digital education. It aims to equip learners with basic information about programming.
+  </p>
+  <div class="slides-container">
+    <iframe
+      src="https://docs.google.com/presentation/d/e/2PACX-1vRPmx25NMBSBvHFrzQIwCPKvVDAyNyLhagHkujSN4S4zy5EvemI0sO3RfRZkHT3YQ/pubembed?start=true&loop=true&delayms=3000"
+      allowfullscreen
+      mozallowfullscreen
+      webkitallowfullscreen
+      title="Programming Languages Intro"
+    ></iframe>
+  </div>
+
+  <p>
+    Focused on the principles and practical uses of blockchain technology, this deck was created to educate and inspire learners about decentralized systems. It blends technical detail with engagi
