--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
       border-radius: 6px;
       list-style: disc inside;
     }
+    .slides-container {
+  position: relative;
+  width: 100%;
+  max-width: 560px;
+  margin: 1.5rem auto 3rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
+  overflow: hidden;
+  background: #000;
+  aspect-ratio: 16 / 9;
+  min-height: 420px; /* force visible height */
+}
+
     /* Video container */
     .video-container {
       position: relative;
