--- a/index.html
+++ b/index.html
@@ -102,6 +102,27 @@
     h2:last-of-type {
       margin-top: 3rem;
     }
+    .video-vertical {
+  position: relative;
+  width: 100%;
+  max-width: 315px; /* narrower for vertical */
+  aspect-ratio: 9 / 16; /* portrait mode */
+  margin: 1.5rem auto 3rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
+  overflow: hidden;
+  background: #000;
+}
+
+.video-vertical iframe {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 8px;
+}
+
     /* Small screens adjustment */
     @media (max-width: 400px) {
       body {
@@ -124,15 +145,13 @@
   </p>
 
   <h2>🎥 Video: Transcendance project showcase</h2>
-  <div class="video-container">
-    <iframe
-      src="https://www.youtube.com/embed/V2-2Ol94Vvk"
-      allowfullscreen
-      mozallowfullscreen
-      webkitallowfullscreen
-      title="Transcendance project showcase"
-    ></iframe>
-  </div>
+<div class="video-vertical">
+  <iframe 
+    src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000" 
+    frameborder="0" allowfullscreen mozallowfullscreen webkitallowfullscreen
+    title="Transcendance Project"
+  ></iframe>
+</div>
 
   <h2>📄 Content Writing</h2>
   <p>
