--- a/index.html
+++ b/index.html
@@ -53,32 +53,8 @@
       border-radius: 6px;
       list-style: disc inside;
     }
-    .slides-container {
-  position: relative;
-  width: 100%;
-  max-width: 560px;
-  margin: 1.5rem auto 3rem;
-  border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
-  overflow: hidden;
-  background: #000;
-  aspect-ratio: 16 / 9;
-  min-height: 420px; /* force visible height */
-}
-
-    /* Video container */
-    .video-container {
-      position: relative;
-      width: 100%;
-      max-width: 560px;
-      margin: 1.5rem auto 3rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
-      overflow: hidden;
-      background: #000;
-      aspect-ratio: 16 / 9;
-    }
-    /* Slides container */
+    /* Containers for iframes */
+    .video-container,
     .slides-container {
       position: relative;
       width: 100%;
@@ -90,176 +66,17 @@
       background: #000;
       aspect-ratio: 16 / 9;
     }
-    iframe {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
-      border-radius: 8px;
-    }
-    /* Contact section tweaks */
-    h2:last-of-type {
-      margin-top: 3rem;
-    }
+    /* Vertical video container for Transcendance */
     .video-vertical {
-  position: relative;
-  width: 100%;
-  max-width: 315px; /* narrower for vertical */
-  aspect-ratio: 9 / 16; /* portrait mode */
-  margin: 1.5rem auto 3rem;
-  border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
-  overflow: hidden;
-  background: #000;
-}
-
-.video-vertical iframe {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
-  border-radius: 8px;
-}
-
-    /* Small screens adjustment */
-    @media (max-width: 400px) {
-      body {
-        padding: 1rem 1rem;
-        font-size: 16px;
-      }
-      .video-container,
-      .slides-container {
-        max-width: 100%;
-      }
-    }
-  </style>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
-</head>
-<body>
-  <h1>RiverFlow Lu Portfolio</h1>
-
-  <p>
-    Storytelling meets code. This portfolio brings together my passion for tech — from fintech and blockchain to AI and app development — with a communicator’s mindset. Whether it’s through visuals, words, or interactive media, I translate complex ideas into content that connects.
-  </p>
-
-  <h2>🎥 Video: Transcendance project showcase</h2>
-<div class="video-vertical">
-  <iframe 
-    src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000" 
-    frameborder="0" allowfullscreen mozallowfullscreen webkitallowfullscreen
-    title="Transcendance Project"
-  ></iframe>
-</div>
-
-  <h2>📄 Content Writing</h2>
-  <p>
-    This presentation provides an in-depth analysis of a single press article on artificial intelligence, unpacking its key arguments, pros, and cons. It showcases the ability to critically evaluate media content and communicate nuanced views on AI’s impact.
-  </p>
-
-  <!-- Three slides inside Content Writing -->
-  <div class="slides-container">
-    <iframe
-      src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000"
-      allowfullscreen
-      mozallowfullscreen
-      webkitallowfullscreen
-      title="AI Press Article Analysis"
-    ></iframe>
-  </div>
-
-  <p>
-    Designed to introduce essential programming languages, this presentation reflects my hands-on experience in software development and digital education. It aims to equip learners with basic information about programming.
-  </p>
-  <div class="slides-container">
-    <iframe
-      src="https://docs.google.com/presentation/d/e/2PACX-1vRPmx25NMBSBvHFrzQIwCPKvVDAyNyLhagHkujSN4S4zy5EvemI0sO3RfRZkHT3YQ/pubembed?start=true&loop=true&delayms=3000"
-      allowfullscreen
-      mozallowfullscreen
-      webkitallowfullscreen
-      title="Programming Languages Intro"
-    ></iframe>
-  </div>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RiverFlow Lu | Portfolio</title>
-  <style>
-    body {
-      font-family: 'Poppins', Arial, sans-serif;
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 1rem 2rem;
-      background: #f9f9f9;
-      color: #333;
-      line-height: 1.6;
-      font-size: 18px;
-    }
-    h1, h2 {
-      color: #007acc;
-      margin-bottom: 0.5rem;
-      font-weight: 700;
-    }
-    h1 {
-      border-bottom: 3px solid #007acc;
-      padding-bottom: 0.5rem;
-      margin-bottom: 2rem;
-      font-size: 2.5rem;
-    }
-    h2 {
-      margin-top: 2.5rem;
-      font-size: 1.75rem;
-    }
-    p {
-      margin-bottom: 1.5rem;
-    }
-    a {
-      color: #007acc;
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-    a:hover, a:focus {
-      text-decoration: underline;
-      color: #004a80;
-    }
-    ul {
-      padding-left: 1.25rem;
-      margin-bottom: 2rem;
-    }
-    li {
-      margin-bottom: 0.5rem;
-      background: #e6f0fa;
-      padding: 0.5rem 1rem;
-      border-radius: 6px;
-      list-style: disc inside;
-    }
-    /* Video container */
-    .video-container {
       position: relative;
       width: 100%;
-      max-width: 560px;
+      max-width: 315px; /* narrower for vertical */
+      aspect-ratio: 9 / 16; /* portrait mode */
       margin: 1.5rem auto 3rem;
       border-radius: 8px;
       box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
       overflow: hidden;
       background: #000;
-      aspect-ratio: 16 / 9;
-    }
-    /* Slides container */
-    .slides-container {
-      position: relative;
-      width: 100%;
-      max-width: 560px;
-      margin: 1.5rem auto 3rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 122, 204, 0.3);
-      overflow: hidden;
-      background: #000;
-      aspect-ratio: 16 / 9;
     }
     iframe {
       position: absolute;
@@ -280,7 +97,8 @@
         font-size: 16px;
       }
       .video-container,
-      .slides-container {
+      .slides-container,
+      .video-vertical {
         max-width: 100%;
       }
     }
@@ -295,13 +113,11 @@
   </p>
 
   <h2>🎥 Video: Transcendance project showcase</h2>
-  <div class="video-container">
-    <iframe
-      src="https://www.youtube.com/embed/V2-2Ol94Vvk"
-      allowfullscreen
-      mozallowfullscreen
-      webkitallowfullscreen
-      title="Transcendance project showcase"
+  <div class="video-vertical">
+    <iframe 
+      src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000" 
+      frameborder="0" allowfullscreen mozallowfullscreen webkitallowfullscreen
+      title="Transcendance Project"
     ></iframe>
   </div>
 
@@ -310,7 +126,7 @@
     This presentation provides an in-depth analysis of a single press article on artificial intelligence, unpacking its key arguments, pros, and cons. It showcases the ability to critically evaluate media content and communicate nuanced views on AI’s impact.
   </p>
 
-  <!-- Three slides inside Content Writing -->
+  <!-- First slide deck -->
   <div class="slides-container">
     <iframe
       src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000"
@@ -324,6 +140,8 @@
   <p>
     Designed to introduce essential programming languages, this presentation reflects my hands-on experience in software development and digital education. It aims to equip learners with basic information about programming.
   </p>
+
+  <!-- Second slide deck -->
   <div class="slides-container">
     <iframe
       src="https://docs.google.com/presentation/d/e/2PACX-1vRPmx25NMBSBvHFrzQIwCPKvVDAyNyLhagHkujSN4S4zy5EvemI0sO3RfRZkHT3YQ/pubembed?start=true&loop=true&delayms=3000"
@@ -337,6 +155,8 @@
   <p>
     Focused on the principles and practical uses of blockchain technology, this deck was created to educate and inspire learners about decentralized systems. It blends technical detail with engaging visuals to support effective digital learning.
   </p>
+
+  <!-- Third slide deck -->
   <div class="slides-container">
     <iframe
       src="https://docs.google.com/presentation/d/e/2PACX-1vTeiV4eE0lX8NW2qEie3UVY1y6NtjbsXhIfl6Btk8yVaXWfDAuWobq5RBX7DP4SJGcPVLDRksqqy6om/pubembed?start=true&loop=true&delayms=3000"
@@ -356,4 +176,3 @@
   <p>Email: <a href="mailto:Riverflow.lu@gmail.com">Riverflow.lu@gmail.com</a></p>
 </body>
 </html>
-
