--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <h2>🎥 Video: Transcendance project showcase</h2>
   <div class="video-vertical">
     <iframe 
-      src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000" 
+    src="https://www.youtube.com/embed/V2-2Ol94Vvk" 
       frameborder="0" allowfullscreen mozallowfullscreen webkitallowfullscreen
       title="Transcendance Project"
     ></iframe>
