--- a/index.html
+++ b/index.html
@@ -167,11 +167,13 @@
     ></iframe>
   </div>
 
-  <h2>🖼️ Design Samples</h2>
+  <h2>🖼️ CV</h2>
   <ul>
     <li>Coming soon ...</li>
   </ul>
-
+<a href="https://www.linkedin.com/in/veroniqueriviere/" target="_blank" rel="noopener noreferrer">
+  Join me on LinkedIn
+</a>
   <h2>📞 Contact</h2>
   <p>Email: <a href="mailto:Riverflow.lu@gmail.com">Riverflow.lu@gmail.com</a></p>
 </body>
