--- a/index.html
+++ b/index.html
@@ -120,7 +120,14 @@
       title="Transcendance Project"
     ></iframe>
   </div>
-
+  <h2>🎥 Video: Minett Video presented by Claire</h2>
+  <div class="video-vertical">
+    <iframe 
+    src="https://www.youtube.com/embed/xTXIGuYR208" 
+      frameborder="0" allowfullscreen mozallowfullscreen webkitallowfullscreen
+      title="Minett Tour"
+    ></iframe>
+  </div>
   <h2>📄 Content Writing</h2>
   <p>
     This presentation provides an in-depth analysis of a single press article on artificial intelligence, unpacking its key arguments, pros, and cons. It showcases the ability to critically evaluate media content and communicate nuanced views on AI’s impact.
