--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@
     ></iframe>
   </div>
 
-  <h2>🖼️ CV</h2>
+  <h2>🙋‍♀️ About me</h2>
   <ul>
-    <a href="https://www.canva.com/design/DAGrJ-kt-TQ/HhVTtu6FsHMOXqpq6xIj4A/view?utm_content=DAGrJ-kt-TQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h652071f99c" target="_blank" rel="noopener noreferrer">Check out my cv here
+     <a href="https://www.canva.com/design/DAGrJ-kt-TQ/HhVTtu6FsHMOXqpq6xIj4A/view?utm_content=DAGrJ-kt-TQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h652071f99c" target="_blank" rel="noopener noreferrer">Check out my CV
 </a>
   </ul>
-<a href="https://www.linkedin.com/in/veroniqueriviere/" target="_blank" rel="noopener noreferrer">
-  Join me on LinkedIn
+
+  <h2>📞 If you like my work - Let's collaborate </h2>
+  <a href="https://www.linkedin.com/in/veroniqueriviere/" target="_blank" rel="noopener noreferrer">Join me on LinkedIn
 </a>
-  <h2>📞 Contact</h2>
-  <p>Email: <a href="mailto:Riverflow.lu@gmail.com">Riverflow.lu@gmail.com</a></p>
+  <p>Drop me an Email: <a href="mailto:Riverflow.lu@gmail.com">Riverflow.lu@gmail.com</a></p>
 </body>
 </html>
