--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
   </p>
 
   <h2>🎥 Video: Transcendance project showcase</h2>
+  <p>This video offers an immersive look into the Transcendance project, final coding project at Ecole 42, highlighting its core vision, modules and technologies</p>
   <div class="video-vertical">
     <iframe 
     src="https://www.youtube.com/embed/V2-2Ol94Vvk" 
@@ -146,7 +147,7 @@
   </div>
   <h2>🎥 Video: French homework Video presented by Nilla</h2>
       <p>
-    This video was shot in Kleinbettingen for a school project featuring Nilla Ferrari - imagine you become a start, tell the story of your life
+    This video was shot in Kleinbettingen for a school project featuring Nilla Ferrari - imagine you become a star, tell the story of your life
   </p>
   <div class="video-horizontal">
     <iframe 
