--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
   </div>
   <h2>🎥 Video: French homework Video presented by Nilla</h2>
       <p>
-    This video was shot in Kleinbettingen for a school project featuring Nilla Ferrari - imagine you become a star, tell the story of your life
-  </p>
+Shot in Kleinbettingen for a school project, this video features Nilla Ferrari imagining her rise to stardom by telling the story of her life, inspired by the style of the ‘Tout est vrai’ show.  </p>
   <div class="video-horizontal">
     <iframe 
     src="https://www.youtube.com/embed/ivPqfBUJcN0" 
