--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </div>
   <h2>🎥 Video: Minett Video presented by Claire</h2>
     <p>
-    This video was shot in Ellergrönn for a school project featuring Claire Masset
+    This Power Director video was shot in Ellergrönn for a school project featuring Claire Masset
   </p>
   <div class="video-horizontal">
     <iframe 
@@ -147,7 +147,7 @@
   </div>
   <h2>🎥 Video: French homework Video presented by Nilla</h2>
       <p>
-Shot in Kleinbettingen for a school project, this video features Nilla Ferrari imagining her rise to stardom by telling the story of her life, inspired by the style of the ‘Tout est vrai’ show.  </p>
+Shot in Kleinbettingen for a school project, this Capcut video features Nilla Ferrari imagining her rise to stardom by telling the story of her life, inspired by the style of the ‘Tout est vrai’ show.  </p>
   <div class="video-horizontal">
     <iframe 
     src="https://www.youtube.com/embed/ivPqfBUJcN0" 
@@ -155,6 +155,17 @@ Shot in Kleinbettingen for a school project, this video features Nilla Ferrari i
       title="Minett Tour"
     ></iframe>
   </div>
+  <h2>🎥 Video: Fureur de Lire Video by Vincent</h2>
+      <p>
+This Powerdirector video was shot using pictures of lego scenes telling the story of the book chosen for the Fureur de Lire Creativity Contest </p>
+  <div class="video-horizontal">
+    <iframe 
+    src="https://www.youtube.com/embed/ToTL9-AkFok" 
+      frameborder="0" allowfullscreen mozallowfullscreen webkitallowfullscreen
+      title="Minett Tour"
+    ></iframe>
+  </div>
+ 
   
   <h2>📄 Content Writing</h2>
   <p>
