--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   </p>
 
   <h2>🎥 Video: Transcendance project showcase</h2>
-  <p>This video offers an immersive look into the Transcendance project, final coding project at Ecole 42, highlighting its core vision, modules and technologies</p>
+  <p>This video published on LinkedIn offers an immersive look into the Transcendance project, final coding project at Ecole 42, highlighting its core vision, modules and technologies</p>
   <div class="video-vertical">
     <iframe 
     src="https://www.youtube.com/embed/V2-2Ol94Vvk" 
