--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 
   <h1>Welcome to RiverFlow Lu</h1>
   <p>
-    Bridging creativity and code — I'm a tech communicator blending storytelling with digital finance expertise. 
-    From video content to fintech insights, explore my work across two focused portfolios.
+    Bridging creativity and code — I'm a tech communicator blending storytelling with digital finance expertise.  </p>
+    <p>From video content to fintech insights, explore my work across two focused portfolios.
   </p>
 
   <div class="links">
-    <a href="communicators/" class="link-card">🎬 Communicators Portfolio</a>
+    <a href="commus/" class="link-card">🎬 Communicators Portfolio</a>
     <a href="digital-finance/" class="link-card">💼 Digital Finance Portfolio</a>
   </div>
 
