--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </p>
 
   <div class="links">
-    <a href="commus/" class="link-card">🎬 Communicators Portfolio</a>
+    <a href="comms/" class="link-card">🎬 Communicators Portfolio</a>
     <a href="digital-finance/" class="link-card">💼 Digital Finance Portfolio</a>
   </div>
 
