--- a/comms/index.html
+++ b/comms/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RiverFlow Lu | Portfolio</title>
+  <title>RiverFlow Lu | Communicators Portfolio</title>
   <style>
     body {
       font-family: 'Poppins', Arial, sans-serif;
