--- a/index.html
+++ b/index.html
@@ -49,4 +49,48 @@
       border-radius: 12px;
       padding: 1.5rem 3rem;
       text-decoration: none;
-      color: #0
+      color: #007acc;
+      font-weight: 700;
+      font-size: 1.3rem;
+      box-shadow: 0 6px 14px rgba(0,122,204,0.15);
+      cursor: pointer;
+      transition: all 0.3s ease;
+      transform: translateY(0);
+      user-select: none;
+    }
+    .link-card:hover,
+    .link-card:focus {
+      background: #007acc;
+      color: white;
+      transform: translateY(-5px);
+      box-shadow: 0 12px 24px rgba(0,122,204,0.3);
+      outline: none;
+    }
+    footer {
+      margin-top: auto;
+      font-size: 0.9rem;
+      color: #666;
+    }
+  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+
+  <img src="your-photo.jpg" alt="RiverFlow Lu" class="avatar" />
+
+  <h1>Welcome to RiverFlow Lu</h1>
+  <p>
+    Hi, I'm RiverFlow Lu — a creative technologist with a dual focus: media storytelling and digital finance. Whether it's through visuals, writing, or fintech systems, I build narratives that make tech meaningful.
+  </p>
+
+  <div class="links">
+    <a href="comms/" class="link-card" tabindex="0">🎬 Communicators Portfolio</a>
+    <a href="digital-finance/" class="link-card" tabindex="0">💼 Digital Finance Portfolio</a>
+  </div>
+
+  <footer>
+    © 2025 RiverFlow Lu – Portfolio Hub
+  </footer>
+
+</body>
+</html>
