--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
 
   <img src="your-photo.jpg" alt="RiverFlow Lu" class="avatar" />
 
-  <h1>Welcome to RiverFlow Lu</h1>
+  <h1>Welcome to RiverFlow Lu - my online portfolio</h1>
   <p>
-    Hi, I'm RiverFlow Lu — a creative technologist with a dual focus: media storytelling and digital finance. Whether it's through visuals, writing, or fintech systems, I build narratives that make tech meaningful.
+    Hi, I'm Véronique Rivière — a creative technologist with over 20 years of experience in fintech and media storytelling. </p>
+  <p>
+    Whether it's through visuals, writing, or fintech systems, I build narratives that make tech meaningful.
   </p>
 
   <div class="links">
