--- a/digital-finance/index.html
+++ b/digital-finance/index.html
@@ -134,84 +134,11 @@
       title="Transcendance Project"
     ></iframe>
   </div>
-  <h2>🎥 Video: Minett Video presented by Claire</h2>
-    <p>
-    This Power Director video was shot in Ellergrönn for a school project featuring Claire Masset
-  </p>
-  <div class="video-horizontal">
-    <iframe 
-    src="https://www.youtube.com/embed/xTXIGuYR208" 
-      frameborder="0" allowfullscreen mozallowfullscreen webkitallowfullscreen
-      title="Minett Tour"
-    ></iframe>
-  </div>
-  <h2>🎥 Video: French homework Video presented by Nilla</h2>
-      <p>
-Shot in Kleinbettingen for a school project, this Capcut video features Nilla Ferrari imagining her rise to stardom by telling the story of her life, inspired by the style of the ‘Tout est vrai’ show.  </p>
-  <div class="video-horizontal">
-    <iframe 
-    src="https://www.youtube.com/embed/ivPqfBUJcN0" 
-      frameborder="0" allowfullscreen mozallowfullscreen webkitallowfullscreen
-      title="Minett Tour"
-    ></iframe>
-  </div>
-  <h2>🎥 Video: Fureur de Lire Video by Vincent</h2>
-      <p>
-This Powerdirector video was shot using pictures of lego scenes telling the story of the book chosen for the Fureur de Lire Creativity Contest </p>
-  <div class="video-horizontal">
-    <iframe 
-    src="https://www.youtube.com/embed/ToTL9-AkFok" 
-      frameborder="0" allowfullscreen mozallowfullscreen webkitallowfullscreen
-      title="Minett Tour"
-    ></iframe>
-  </div>
  
-  
-  <h2>📄 Content Writing</h2>
-  <p>
-    This presentation provides an in-depth analysis of a single press article on artificial intelligence, unpacking its key arguments, pros, and cons. It showcases the ability to critically evaluate media content and communicate nuanced views on AI’s impact.
+  <p style="color:#555; font-style: italic; margin-top: -1rem; margin-bottom: 2rem; display: flex; align-items: center; justify-content: center; gap: 0.5rem; font-size: 0.95rem;">
+  <span style="font-size: 1.2rem;">ℹ️</span> Digital Finance portfolio page is under construction — coming soon
   </p>
 
-  <!-- First slide deck -->
-  <div class="slides-container">
-    <iframe
-      src="https://docs.google.com/presentation/d/e/2PACX-1vQO2T38Sxcslfoj6nnHrNA5fGoEiowVUlPt049LV4z0RF0K_z9h1HgvpGX_sxuHBAixr0oTfTddQMTO/pubembed?start=true&loop=true&delayms=3000"
-      allowfullscreen
-      mozallowfullscreen
-      webkitallowfullscreen
-      title="AI Press Article Analysis"
-    ></iframe>
-  </div>
-
-  <p>
-    Designed to introduce essential programming languages, this presentation reflects my hands-on experience in software development and digital education. It aims to equip learners with basic information about programming.
-  </p>
-
-  <!-- Second slide deck -->
-  <div class="slides-container">
-    <iframe
-      src="https://docs.google.com/presentation/d/e/2PACX-1vRPmx25NMBSBvHFrzQIwCPKvVDAyNyLhagHkujSN4S4zy5EvemI0sO3RfRZkHT3YQ/pubembed?start=true&loop=true&delayms=3000"
-      allowfullscreen
-      mozallowfullscreen
-      webkitallowfullscreen
-      title="Programming Languages Intro"
-    ></iframe>
-  </div>
-
-  <p>
-    Focused on the principles and practical uses of blockchain technology, this deck was created to educate and inspire learners about decentralized systems. It blends technical detail with engaging visuals to support effective digital learning.
-  </p>
-
-  <!-- Third slide deck -->
-  <div class="slides-container">
-    <iframe
-      src="https://docs.google.com/presentation/d/e/2PACX-1vTeiV4eE0lX8NW2qEie3UVY1y6NtjbsXhIfl6Btk8yVaXWfDAuWobq5RBX7DP4SJGcPVLDRksqqy6om/pubembed?start=true&loop=true&delayms=3000"
-      allowfullscreen
-      mozallowfullscreen
-      webkitallowfullscreen
-      title="Blockchain Technology Principles"
-    ></iframe>
-  </div>
 
   <h2>🙋‍♀️ About me</h2>
   <ul>
