--- a/digital-finance/index.html
+++ b/digital-finance/index.html
@@ -142,7 +142,7 @@
 
   <h2>🙋‍♀️ About me</h2>
   <ul>
-     <a href="https://www.canva.com/design/DAGrJ-kt-TQ/HhVTtu6FsHMOXqpq6xIj4A/view?utm_content=DAGrJ-kt-TQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h652071f99c" target="_blank" rel="noopener noreferrer">Check out my CV
+     <a href="https://www.canva.com/design/DAGruHrnUbs/t2K5-TIYvjULo400qRpsYQ/view?utm_content=DAGruHrnUbs&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=he8c8360d5f" target="_blank" rel="noopener noreferrer">Check out my CV
 </a>
   </ul>
 
