--- a/comms/index.html
+++ b/comms/index.html
@@ -119,7 +119,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <h1>RiverFlow Lu Portfolio</h1>
+  <h1>RiverFlow Lu Communicators Portfolio</h1>
 
   <p>
     Storytelling meets code. This portfolio brings together my passion for tech — from fintech and blockchain to AI and app development — with a communicator’s mindset. Whether it’s through visuals, words, or interactive media, I translate complex ideas into content that connects.
